--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
       	<input type="text" name="lattext" id="lattext" value=""  />
       	<label for="time">Time:</label>
       	<input type="text" name="time" id="time" value=""  />
+        <label for="accuracy">Accuracy:</label>
+      	<input type="text" name="accuracy" id="accuracy" value=""  />
     </div>
   </div>
 
